<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parkingLotLayout"
    tools:context=".Views.MainActivity"
    >

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EightyDP"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/grey"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/fifteenDP"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/fortyDP"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry,SpUsage" />
    </Toolbar>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fortyDP"
        android:indeterminate="false"
        android:progressDrawable="@drawable/progressbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        style="?android:attr/progressBarStyleHorizontal"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="200dp"
        android:padding="@dimen/tenDP"
        android:max="30"
        android:progress="38"
        />

    <TextView
        android:id="@+id/busyLotsQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/thirtyDP"
        android:text="@string/_0"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/progressBar"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/busyLots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toEndOf="@+id/busyLotsQuantity"
        android:paddingStart="@dimen/fiveDP"
        android:paddingBottom="@dimen/tenDP"
        android:text="@string/busy"
        android:textStyle="bold"
        android:textColor="@color/grey"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/freeLotsQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintEnd_toStartOf="@+id/freeLots"
        android:paddingEnd="@dimen/fiveDP"
        android:text="@string/_30"
        android:textStyle="bold"
        android:textColor="@color/grey"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/freeLots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="@id/progressBar"
        android:paddingEnd="@dimen/thirtyDP"
        android:text="@string/free"
        android:textStyle="bold"
        android:textColor="@color/grey"
        tools:ignore="RtlSymmetry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Odp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/busyLots" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAddButton"
        android:layout_width="@dimen/EightyDP"
        android:layout_height="@dimen/EightyDP"
        android:layout_marginEnd="@dimen/fortyDP"
        android:layout_marginBottom="@dimen/fortyDP"
        android:clickable="true"
        app:fabCustomSize="@dimen/EightyDP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="@dimen/seventyDP"
        android:backgroundTint="@color/grey"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:focusable="true"
        android:contentDescription="@string/floating_action_button" />

</androidx.constraintlayout.widget.ConstraintLayout>